--- a/backup_final.yaml
+++ b/backup_final.yaml
@@ -2,19 +2,13 @@
 # ============================================
 # Playbook AWX: Cinder Volume Backup (One-Shot)
 # Eseguito dallo schedule per fare backup automatici
-# Usa API REST invece dei moduli OpenStack
+# Usa API REST e credenziali AWX OpenStack
 # ============================================
 
 - name: Create Cinder Volume Backup
   hosts: localhost
   connection: local
   gather_facts: true
-  
-  vars:
-    # Configurazione OpenStack - modifica questi valori
-    os_auth_url: "https://region-milano.linuxwall.it:5000/v3"
-    os_project_domain_name: "Default"
-    os_user_domain_name: "Default"
   
   tasks:
     # =============================================
@@ -31,29 +25,32 @@
         success_msg: "Variables OK - volume_id: {{ volume_id }}, tenant: {{ tenant_name }}"
     
     # =============================================
-    # 2. CARICA CREDENZIALI OPENSTACK
+    # 2. CARICA CREDENZIALI OPENSTACK DA AWX
     # =============================================
     
-    - name: Get OpenStack credentials from environment
+    - name: Load OpenStack credentials from AWX environment
       set_fact:
-        os_username: "{{ lookup('env', 'OS_USERNAME') }}"
+        os_auth_url: "{{ lookup('env', 'OS_AUTH_URL') | default('https://region-milano.linuxwall.it:5000/v3', true) }}"
+        os_username: "{{ lookup('env', 'OS_USERNAME') | default('sourcesense', true) }}"
         os_password: "{{ lookup('env', 'OS_PASSWORD') }}"
-        os_project_name: "{{ lookup('env', 'OS_PROJECT_NAME') | default(tenant_name) }}"
+        os_project_name: "{{ lookup('env', 'OS_PROJECT_NAME') | default(tenant_name, true) }}"
+        os_project_domain_name: "{{ lookup('env', 'OS_PROJECT_DOMAIN_NAME') | default('default', true) }}"
+        os_user_domain_name: "{{ lookup('env', 'OS_USER_DOMAIN_NAME') | default('default', true) }}"
     
-    - name: Validate OpenStack credentials
-      assert:
-        that:
-          - os_username | length > 0
-          - os_password | length > 0
-          - os_project_name | length > 0
-        fail_msg: "ERROR: OpenStack credentials not found in environment variables"
-    
-    - name: Display auth info
+    - name: Check if credentials are loaded
       debug:
         msg:
           - "Auth URL: {{ os_auth_url }}"
-          - "Project: {{ os_project_name }}"
           - "Username: {{ os_username }}"
+          - "Project: {{ os_project_name }}"
+          - "User Domain: {{ os_user_domain_name }}"
+          - "Project Domain: {{ os_project_domain_name }}"
+          - "Password loaded: {{ 'Yes' if os_password | length > 0 else 'No' }}"
+    
+    - name: Fail if password not found
+      fail:
+        msg: "Password not found. Ensure OpenStack credential is attached to the Job Template"
+      when: os_password | length == 0
     
     # =============================================
     # 3. AUTENTICAZIONE OPENSTACK
